--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was made using openweathermap.com and geocode.com</p>
         <img class="portrait" src="/img/MedalBot-1.png" alt="bot image">
         
     </div>
